--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:description" content="Profesional especializado en seguridad ofensiva con certificaciones OSCP, HTB CPTS y eWPT.">
     
     <!-- Remix Icon -->
-    <link href="/css/remixicon.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
